vlib/v/checker/tests/lock_needed.vv
struct St {
mut:
	x int
}

fn main() {
	shared abc := &St{
		x: 5
	}
	abc.x++
	println(abc.x)
}
